5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1764_2390.log
== TEST (2019-05-28 16:05:55) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:20) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:23) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

g = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    g = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:25) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

 = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:29) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

hghgh = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    hghgh = 0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:32) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:01) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:05) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:36) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	   i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:10) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:18) 
-- CODE:
from numpy import*
fre = array(eval(input(": "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:53) 
-- CODE:
from numpy import*
fre = array(eval(input(": ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:08) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:16) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:45) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:33:57) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:33:59) 
-- CODE:
from numpy import*
fre = array(eval(input("Taina: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- EXECUTION TIME:
0.432941
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:54:07) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:55:02) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:20) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:35) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:44) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
